Add most recent changes